2005-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Dictionary.cs: Added [Serializable] attribute to both inner 
	Enumerator struct in Key and Value inner collection classes.
	* EqualityComparer.cs: Added missing IEqualityComparer interface.
	* List.cs: Added [Serializable] attribute to both inner Enumerator
	struct.

2005-12-19  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* Dictionary.cs: Fixed ICollection.CopyTo to use DictionaryEntry. Fixed
	Key and Value CopyTo not to throw exception if the dictionary is empty
	(fix bug #77019).
	* List.cs: Fix exception reporting to match MS behaviour (2.0 final).

2005-11-19  Zoltan Varga  <vargaz@gmail.com>

	* KeyNotFoundException.cs: Add default message.

2005-09-18  Miguel de Icaza  <miguel@novell.com>

	* Dictionary.cs: Change style for internal fields.

	If the capacity is zero, set the capacity to our default size as 0
	is an allowed parameter in .NET

2005-08-10  Kamil Skalski  <nazgul@nemerle.org>

	* KeyValuePair.cs, Dictionary.cs: Change Key and Value to properties to match
	.NET 2.0 July CTP. Update its use in Dictionary, since now we
	cannot write to them.
	
2005-07-10  Kamil Skalski <nazgul@nemerle.org>

	* Comparer.cs, EqualityComparer.cs: Use MakeGenericType instead of BindGenericParameters.


2005-06-27  Raja R Harinath  <rharinath@novell.com>

	Introduce some thread-safety by removing the modify-on-read
	move-to-front heuristic.
	* Dictionary.cs (_enumeratorGeneration, _enumerators): Remove.
	(Count): Add internal property set.  Invalidate enumerators when
	Count is changed.  Change all references of _usedSlots to Count.
	(this): Invalidate enumerators when the value of some slot is
	changed, even if the layout of the data-structure isn't modified.
	(DoHash): Remove null-key check.  All codepaths leading to this
	function already have the check.
	(GetSlot): Remove move-to-front heuristic.
	(Remove): Update.

2005-06-24  Martin Baulig  <martin@ximian.com>
